# argparse-markdown

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/argparse_markdown/: generator.py
tests/: test_skel.py
