[project]
requires-python = ">=3.10"

[tool.poetry]
name = "jockey"
version = "0.2.0"
description = "A simple tool for documenting argparse objects using markdown."
readme = "README.md"
authors = [
    "Connor Chamberlain <the@johnlettman.com>"
]

classifiers = [
        "Development Status :: 4 - Beta",
    "Environment :: Console",
        "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
        "Typing :: Typed",

]

packages = [
    { include = "argparse_markdown", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^24.3.0"
mypy = "^1.11"
flake8 = "^7.1.1"
Flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.8.19"
pytest = "^8.0.0"
coverage = "^7.0.0"
pytest-cov = "^5.0.0"
pytest-md-report = "^0.6.2"


[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
md_report = true
md_report_verbose = 0
md_report_color = "auto"
md_report_flavor = "gfm"
md_report_output = ".github-test-report.md"

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    \.pytest_cache
  | \.git
  | \.mypy_cache
)
'''

[tool.isort]
profile = 'black'
line_length = 120
star_first = true
group_by_package = true
force_sort_within_sections = true
lines_after_imports = 2
honor_noqa = true
atomic = true
ignore_comments = false
skip_gitignore = true
src_paths = ['src', 'tests']

[tool.flake8]
max-line-length = 120
max-complexity = 18
count = true
show-source = true
statistics = true
disable-noqa = false
enable-extensions = [
    'G', # flake8-logging-format
]
extend-ignore = ["E203"]
extend-exclude = [
    '.github',
    '.Python',
    '.*.pyc',
    '.*.pyo',
    '.*.pyd',
    '.*.py.class',
    '*.egg-info',
    'venv*',
    '.venv*',
    '.*_cache',
    'lib',
    'lib64',
    '.*.so',
    'build',
    'dist',
    'sdist',
    'wheels',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
